--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background: #ffffff !important;
+  /* background: #ffffff !important; */
+  background: #faf2f2 !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
