--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 }
 body {
   /* background: #ffffff !important; */
-  background: #faf2f2 !important;
+  /* background: #faf2f2 !important; */
+  background: #ffffff !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
